commit my changes

--- a/WebContent/try.html
+++ b/WebContent/try.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Insert title here</title>
-Trying to change the files in the desk and seeing it is linking to the issue #14
+Trying to change the files in the desk and seeing it is linking to the issue #14 adding more
 </head>
 <body>
 
